fixed urls/id: not pring long URL

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,14 +10,16 @@
     />
     <title>URL - TinyApp Example</title>
   </head>
-
+    <header>
+      <%- include('partials/_header') %>
+    </header>
   <body>
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+          Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
         </p>
       </div>
       <div class="card-footer text-muted"></div>
@@ -40,3 +42,4 @@
     ></script>
   </body>
 </html>
+ 
